--- a/ssis_app/templates/add_student.html
+++ b/ssis_app/templates/add_student.html
@@ -104,7 +104,7 @@
     /* GENDER DROPDOWN */
     const dropdowngender = document.getElementById('gender-dropdown');
     const optionsgender = document.getElementById('gender-options');
-    let selectedGender = null; // Variable to store the selected gender
+    let selectedGender = null; 
 
     dropdowngender.addEventListener('click', function() {
         optionsgender.classList.toggle('show');
@@ -112,14 +112,13 @@
 
     optionsgender.addEventListener('click', function(e) {
         if (e.target.classList.contains('dropdown-option')) {
-            selectedGender = e.target.getAttribute('data-value'); // Update the selected value
+            selectedGender = e.target.getAttribute('data-value'); 
             dropdowngender.textContent = selectedGender;
             optionsgender.classList.remove('show');
             document.getElementById('selectedGender').value = selectedGender;
         }
     });
 
-    // Close the dropdown when clicking outside the dropdown or select
     document.addEventListener('click', function(e) {
         if (e.target !== dropdowngender && e.target !== optionsgender) {
             optionsgender.classList.remove('show');
@@ -129,7 +128,7 @@
     /* YEAR LEVEL DROPDOWN */
     const dropdownylevel = document.getElementById('ylevel-dropdown');
     const optionsylevel = document.getElementById('ylevel-options');
-    let selectedYLevel = null; // Variable to store the selected year level
+    let selectedYLevel = null; 
 
     dropdownylevel.addEventListener('click', function() {
         optionsylevel.classList.toggle('show');
@@ -137,44 +136,19 @@
 
     optionsylevel.addEventListener('click', function(e) {
         if (e.target.classList.contains('dropdown-option')) {
-            selectedYLevel = e.target.getAttribute('data-value'); // Update the selected value
+            selectedYLevel = e.target.getAttribute('data-value'); 
             dropdownylevel.textContent = selectedYLevel;
             optionsylevel.classList.remove('show');
             document.getElementById('selectedYLevel').value = selectedYLevel;
         }
     });
 
-    // Close the dropdown when clicking outside the dropdown or select
     document.addEventListener('click', function(e) {
         if (e.target !== dropdownylevel && e.target !== optionsylevel) {
             optionsylevel.classList.remove('show');
         }
     });
 
-    // /* COURSE DROPDOWN */
-    // const dropdowncourse = document.getElementById('course-dropdown');
-    // const optionscourse = document.getElementById('course-options');
-    // let selectedCourse = null; // Variable to store the selected course
-
-    // dropdowncourse.addEventListener('click', function() {
-    //     optionscourse.classList.toggle('show');
-    // });
-
-    // optionscourse.addEventListener('click', function(e) {
-    //     if (e.target.classList.contains('dropdown-option')) {
-    //         selectedCourse = e.target.getAttribute('data-value'); // Update the selected value
-    //         dropdowncourse.textContent = selectedCourse;
-    //         optionscourse.classList.remove('show');
-    //         document.getElementById('selectedCourse').value = selectedCourse;
-    //     }
-    // });
-
-    // // Close the dropdown when clicking outside the dropdown or select
-    // document.addEventListener('click', function(e) {
-    //     if (e.target !== dropdowncourse && e.target !== optionscourse) {
-    //         optionscourse.classList.remove('show');
-    //     }
-    // });
 </script>
 
 {% endblock %}  
