--- a/ssis_app/templates/base.html
+++ b/ssis_app/templates/base.html
@@ -13,15 +13,15 @@
 <body>
     <header>
         <a href="{{ url_for('index') }}">
-            <div class="logo style"></div>
-            <div class="main logo">STUDENT INFORMATION SYSTEM</div>
+            <div class="logo-style"></div>
+            <div class="main-logo">STUDENT INFORMATION SYSTEM</div>
         </a>
     </header>
 
     {% block content %} {% endblock %}
 
     <footer>
-        <div class="footer rect">Copyright © 2023 Paragoso</div>
+        <div class="footer-rect">Copyright © 2023 Paragoso</div>
     </footer>
 </body>
 </html>
