--- a/ssis_app/templates/edit_college.html
+++ b/ssis_app/templates/edit_college.html
@@ -12,7 +12,7 @@
 </nav>
 
 <div class="entity bg"></div>
-<div class="backicon"><a href="{{ url_for('college.college_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
+<div class="back-icon"><a href="{{ url_for('college.college_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
 <div class="entity heading">EDIT COLLEGE INFORMATION</div>
 
 <!-- EDIT COLLEGE FORM -->
