--- a/ssis_app/templates/add_course.html
+++ b/ssis_app/templates/add_course.html
@@ -12,7 +12,7 @@
 </nav>
 
 <div class="entity bg"></div>
-<div class="backicon"><a href="{{ url_for('course.course_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
+<div class="back-icon"><a href="{{ url_for('course.course_list') }}"><img src="{{ url_for('static', filename='images/back-icon.png') }}"></a></div>
 <div class="entity heading">ADD COURSE</div>
 
 <!-- ADD COURSE FORM -->
